--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
   </head>
   <body>
-    <h1>John Smith</h1>
+    <h1>Jack Dormer - About Me</h1>
 
     <nav>
       <p>
